kernel/atomgit/vsock_uapi：引入 linux_vm_sockets.h 导致用户空间编译失败.txt
#标题
vsock/uapi：引入 linux/vm_sockets.h 导致用户空间编译失败

#内核版本
OLK-6.6

#问题现象
用户空间应用程序仅包含 `<linux/vm_sockets.h>` 头文件时，编译构建失败，报错提示类型不完整和类型未声明。

#主要错误日志
/usr/include/linux/vm_sockets.h:182:39: error: invalid application of ‘sizeof’ to incomplete type ‘struct sockaddr’
  182 |         unsigned char svm_zero[sizeof(struct sockaddr) -
      |                                       ^~~~~~
/usr/include/linux/vm_sockets.h:183:39: error: ‘sa_family_t’ undeclared here (not in a function)
  183 |                                sizeof(sa_family_t) -
      |

#问题根因
头文件 `<linux/vm_sockets.h>` 中使用了 `struct sockaddr` 和 `sa_family_t`，但未包含定义这些类型的头文件。在用户空间编译时，由于缺少 `<sys/socket.h>` 的包含，导致编译器无法找到相关定义从而报错。

#解决方案
在 `include/uapi/linux/vm_sockets.h` 文件中增加条件编译逻辑：当非内核环境（`#ifndef __KERNEL__`）时，包含 `<sys/socket.h>` 头文件，以提供 `struct sockaddr` 和 `sa_family_t` 的定义。

#来源
https://atomgit.com/openeuler/kernel/commit/20002f394f6204b8f12048c3ee358f58dd8a1f47